--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,23 @@ img{
 h2{
 font-size: 0.8rem;
 }
+
+
+/* Style for Filter */
+.filter-container{
+  margin-right: 2rem;
+  min-width: 5rem;
+  padding: 0.5rem 1rem;
+  border: none;
+  background: white;
+  color: rgb(65, 98, 168);
+  border-radius:1rem;
+  border: 2px solid rgb(28, 36, 53);
+  font-weight: bold;
+  cursor: pointer;
+}
+
+button.active{
+background: rgb(65, 98, 168);
+color: white;  
+}
