--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ font-size: 0.8rem;
 
 
 /* Style for Filter */
-.filter-container{
+.filter-container button{
   margin-right: 2rem;
   min-width: 5rem;
   padding: 0.5rem 1rem;
